# GVP-MREP

./: LICENSE  README.md
Communication/multisim_gazebo/: CMakeLists.txt  package.xml
Communication/multisim_gazebo/include/multisim_gazebo/: multi_rotors.h
Communication/multisim_gazebo/launch/: demo_2drones.launch  rotors_hull_sim.launch  rotors_sim.launch
Communication/multisim_gazebo/msg/: IdOdom.msg  states.msg
Communication/multisim_gazebo/resource/: 2_1_rotors.yaml
Communication/multisim_gazebo/src/: multi_rotors.cpp  multi_rotors_node.cpp
Communication/multisim_gazebo/worlds/: amagi1.world  building.world  flat.world  large_maze.world  large_maze_lid.world  maze3.world  maze4.world  power_plant.world
Communication/swarm_bridge/: CMakeLists.txt  note.md  package.xml
Communication/swarm_bridge/include/: bridge_ros_tcp.h  bridge_ros_tcp_sim.h  bridge_ros_udp.h  reliable_bridge.hpp
Communication/swarm_bridge/launch/: local_tcp.launch  test_tcp_drone2.launch
Communication/swarm_bridge/src/: bridge_ros_tcp.cpp  bridge_ros_tcp_sim.cpp  bridge_ros_udp.cpp
Communication/swarm_data/: CMakeLists.txt  package.xml
Communication/swarm_data/include/swarm_data/: swarm_data.h
Communication/swarm_data/src/: swarm_data.cpp
Exploration/graph_partition/: CMakeLists.txt  package.xml
Exploration/graph_partition/include/graph_partition/: graph_partition.h
Exploration/graph_partition/src/: graph_partition.cpp
Exploration/multiDTG/: CMakeLists.txt  package.xml
Exploration/multiDTG/include/multiDTG/: dtg_structures.h  multiDTG.h
Exploration/multiDTG/src/: multiDTG.cpp  multiDTG_path_search.cpp
Exploration/murder_swarm/: CMakeLists.txt  package.xml
Exploration/murder_swarm/include/murder_swarm/: ground.h  murder.h  murderFSM.h
Exploration/murder_swarm/launch/: debug.launch  murder_ground_demo.launch  murder_single.launch  murder_single_demo.launch  murder_swarm2_demo.launch  murder_swarm2_sim.launch  murder_swarm_maze3.launch  murder_swarm_maze4.launch  murder_swarm_testcity.launch  murder_swarm_trigger.launch  murder_xingxing.launch  rotors_sim.launch  uav_model.launch
Exploration/murder_swarm/resource/: debug.yaml  murder_map_xingxing.yaml  murder_map_xingxing_ground.yaml  murder_maze3.yaml  murder_maze3_ground.yaml  murder_maze4.yaml  murder_maze4_ground.yaml  murder_swarm2_demo.yaml  murder_testcity.yaml  murder_testcity_ground.yaml
Exploration/murder_swarm/rviz/: debug.rviz  ground_demo.rviz  murder_demo.rviz  murder_swarm2_demo.rviz  murder_swarm_local.rviz
Exploration/murder_swarm/src/: ground.cpp  ground_node.cpp  murder.cpp  murderFSM.cpp  murder_node.cpp  swarm_trigger.cpp
MSGS/exp_comm_msgs/: CMakeLists.txt  package.xml
MSGS/exp_comm_msgs/msg/: DtgBagAnswer.msg  DtgBagC.msg  IdPoseC.msg  MapC.msg  MapReqC.msg  SwarmJobC.msg  SwarmStateC.msg  SwarmTrajC.msg
MSGS/swarm_exp_msgs/: CMakeLists.txt  package.xml
MSGS/swarm_exp_msgs/msg/: DtgBag.msg  DtgFFEdge.msg  DtgFNode.msg  DtgHFEdge.msg  DtgHHEdge.msg  DtgHNode.msg  IdOdom.msg  IdPose.msg  LocalTraj.msg  SwarmTraj.msg
Mapping/block_map/: CMakeLists.txt  package.xml
Mapping/block_map/color/: Abbey_Road.yaml  Burn.yaml  DrFeelgood.yaml  Odessey_Oracle.yaml  Paranoid.yaml  Powerslave.yaml  TDSOTM.yaml  ViewpointColor.yaml  color_id.yaml
Mapping/block_map/include/block_map/: block_map.h  color_manager.h  mapping_struct.h  raycast.h
Mapping/block_map/rviz/: showvox.rviz
Mapping/block_map/src/: block_map.cpp  color_manager.cpp  raycast.cpp
Mapping/frontier_grid/: CMakeLists.txt  package.xml
Mapping/frontier_grid/include/frontier_grid/: frontier_grid.h  frontier_struct.h
Mapping/frontier_grid/src/: frontier_grid.cpp
Mapping/lowres_map/: CMakeLists.txt  Readme.md  package.xml
Mapping/lowres_map/include/lowres_map/: lowres_map.h
Mapping/lowres_map/src/: lowres_map.cpp  path_search.cpp
Test/ato_test/: CMakeLists.txt  package.xml
Test/ato_test/launch/: cmd_test.launch  fov_ray.launch  swarm_traj.launch
Test/ato_test/launch/swarm_sim/: swarm_vis.launch
Test/ato_test/resource/: example.yaml  fov_cam.yaml  multi_robots_gazebo.yaml  multirobots.yaml
Test/ato_test/rviz/: DTG.rviz  MR_DTG.rviz  blockmap_lowres.rviz  cmd_test.rviz  corridor.rviz  fov_gain.rviz  frontier.rviz  minco.rviz  swarm_test.rviz  swarm_traj.rviz
Test/ato_test/src/: GMM_test.cpp  cmd_repub.cpp  cmd_test.cpp  fov_ray_test.cpp  swarm_data_test.cpp  traj_swarm.cpp
Test/ato_test/worlds/: flat3.world  forest.world  map_xingxing.world  maze1.world  maze2.world  maze3.world  maze4.world  testcity.world  testcity2.world  testmap.world  tunnel.world
Trajectory/gcopter/: CMakeLists.txt
Trajectory/gcopter/config/: opt.yaml
Trajectory/gcopter/include/gcopter/: fastcheck_traj.hpp  gcopter.hpp  geo_utils.hpp  minco.hpp  traj_opt.h
Trajectory/gcopter/src/: traj_opt.cpp
Trajectory/traj_exc/: CMakeLists.txt  package.xml
Trajectory/traj_exc/src/: traj_exc_node.cpp
Trajectory/yaw_planner/: CMakeLists.txt  package.xml
Trajectory/yaw_planner/include/yaw_planner/: yaw_planner.h
Trajectory/yaw_planner/src/: yaw_planner.cpp
data_statistics/: CMakeLists.txt  package.xml
data_statistics/include/data_statistics/: computation_statistician.h
data_statistics/launch/: vt_statistician.launch  vts_test.launch
data_statistics/rviz/: vts.rviz
data_statistics/src/: computation_statistician.cpp
doing/: experiment.txt  todo.txt
