<?xml version="1.0"?>
<package format="2">
  <name>data_statistics</name>
  <version>0.0.0</version>
  <description>The data_statistics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <!-- <maintainer email="qianlidong@stumail.neu.edu.cn">CharlieDog</maintainer> -->
  <maintainer email="qianlidong@mail.nankai.edu.cn">CharlieDog</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- <depend>NKPlanner</depend> -->
  <!-- <depend>visualization_msgs</depend> -->

  <!-- <depend>geometry_msgs</depend>
  <depend>explore_con</depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
