<?xml version="1.0"?>
<package format="2">
  <name>graph_partition</name>
  <version>0.0.0</version>
  <description>The graph_partition package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="qianlidong@mail.nankai.edu.cn">CharlieDog</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <!-- <depend>octomap_world</depend> -->
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <!-- <depend>frontier_manager</depend> -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>block_map</depend>
  <depend>lowres_map</depend>
  <depend>frontier_grid</depend>
  <depend>swarm_data</depend>
  <depend>multiDTG</depend>
  <depend>yaw_planner</depend>
  <!-- <depend>explore_con</depend> -->
  <!-- <depend>kdtree</depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
