<?xml version="1.0"?>
<package format="2">
  <name>block_map</name>
  <version>0.0.0</version>
  <description>The block_map package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="qianlidong@mail.nankai.edu.cn">CharlieDog</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <!-- <depend>octomap_world</depend> -->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <!-- <depend>NKPlanner</depend> -->
  <depend>cv_bridge</depend>
  <!-- <depend>visualization_msgs</depend> -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>swarm_data</depend>
  <!-- <depend>explore_con</depend>
  <depend>kdtree</depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
