<?xml version="1.0"?>
<package format="2">
  <name>lowres_map</name>
  <version>0.0.0</version>
  <description>The lowres_map package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="charlie_dog@163.com">CharlieDog</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <!-- <depend>octomap_world</depend> -->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <!-- <depend>frontier_manager</depend> -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>block_map</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <!-- <depend>explore_con</depend> -->
  <!-- <depend>kdtree</depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
