<?xml version="1.0"?>
<package format="2">
  <name>ato_test</name>
  <version>0.0.0</version>
  <description>The ato_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="charlie_dog@163.com">CharlieDog</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>lowres_map</depend>
  <depend>multiDTG</depend>
  <depend>block_map</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>mav_msgs</depend>  
  <depend>frontier_grid</depend>
  <depend>gflags_catkin</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>glog_catkin</depend>  
  <depend>gcopter</depend>
  <depend>yaw_planner</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
